# DepAnalyzer

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  REFACTORING.md  TODO  fix_exceptions.py  main.py  pyproject.toml
analysis/: deadcode.py  linkage.py
cli/: __main__.py  export.py  scan.py
core/: schema.py
depanalyzer/: main.py
depanalyzer/analysis/: deadcode.py  linkage.py  uncertainty.py
depanalyzer/cli/: __init__.py  dag.py  export.py  scan.py  scancode.py
depanalyzer/config/: __init__.py  (+1 more)
docs/: README.md  architecture.md  architecture_improvements_summary.md  cli-reference.md  config_vs_code_parsing.md  configuration.md  dependency_graph_lifecycle_and_config.md  ecosystem_architecture.md  extension-guide.md  getting-started.md  implementation_summary.md  index.md  mixed_language_linking.md  multiprocess_architecture.md  refactoring_plan.md  scripts.md  usage.md
export/: __init__.py  dot.py  graphml.py  json.py
graph/: manager.py  registry.py
hooks/: __init__.py  hvigor_cmake_bridge.py  linkage_enrichment.py  packaging_bridge.py  unresolved_marking.py
runtime/: eventbus.py  lifecycle.py  transaction.py  worker.py  workspace.py
scripts/: graph_explorer_tui.py  interactive_graph_explorer.py  run_license_compatibility.py  test.py
tests/: test_architecture.py  test_cli.py  test_cmake_contracts.py  test_file_completeness_policy.py  test_global_dag_cycles.py  test_graph_io.py  test_license_attachment_policy.py  test_maven_parser.py  test_runtime_api.py  test_scalability.py  test_security_fixes.py  test_worker_perf.py
utils/: graph.py
(+174 files in other folders)
